# SWE-harness-local

./: README.md  custom_script.py  lite_all_preds.jsonl  main.py  pyproject.toml  run_a_script.py
results/sympy__sympy-24909/edit_location/: args.json  loc_outputs.jsonl
results/sympy__sympy-24909/edit_location_samples/: args.json  loc_outputs.jsonl
results/sympy__sympy-24909/edit_location_samples_merged/: args.json  loc_all_merged_outputs.jsonl  loc_merged_0-1_outputs.jsonl  loc_merged_2-2_outputs.jsonl  loc_merged_2-3_outputs.jsonl
results/sympy__sympy-24909/file_level/: args.json  loc_outputs.jsonl
results/sympy__sympy-24909/related_level/: args.json  loc_outputs.jsonl
scripts/: run_sympy__sympy-24909.sh
