[tool.poetry]
name = "swe-harness-local"
version = "0.1.0"
description = ""
authors = ["Saurav Panda"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
swebench = "^2.0.12"
docker = "^7.1.0"
jsonlines = "^4.0.0"
black = "^24.8.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
